--- a/Develop/style.css
+++ b/Develop/style.css
@@ -57,3 +57,15 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+header p, h1 {
+  text-align: center;
+}
+
+p {
+  line-height: 0.5;
+}
+
+.margin-bottom {
+  margin-bottom: 30px;
+}
